--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 PORT=8000
+TOKEN_SECRET=secret
 
 # This was inserted by `prisma init`:
 # Environment variables declared in this file are automatically made available to Prisma.
