--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express": "^4.19.2",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "socket.io": "^4.7.5"
   },
   "devDependencies": {
     "prisma": "^5.15.1"
